improve value displaying, fix bug in config querying
- when querying the custom config for eval we replace - with :
  but we didn't do that for querying custom config for popup data.
  this lead to inconsistencies which name to use for assigning
  custom config entries to elements
- added ability to add suffix to popup text display rows. usable
  for eg: displaying units
- value outputs throughout the pnid are now using a monospace font
  for less jumping around of digits with changing values
- in a number of places we are now more consistent with displaying
  a fixed number of decimal points, also not truncating in case of
  trailing zeroes, again for less jumping around.

--- a/client/css/pnid.css
+++ b/client/css/pnid.css
@@ -8,6 +8,11 @@
 	justify-content: start;
 }
 
+
+label.popup-value-out, label.popup-value-suffix-out, text.pnid-property.value {
+    font-family: "Inconsolata", monospace;
+}
+
 .pnid-svg {
     position: relative;
     top: 0; left: 0;
